# roscfs

cfs_bridge/: CMakeLists.txt  README.md  cfs_bridge.launch  cfs_bridge.py  package.xml
cfs_msg_gen/: CMakeLists.txt  README.md  generate_cfs_messages.py  package.xml  setup.py
cfs_msg_gen/cmake/: cfs_msg_gen-extras.cmake.em
