<?xml version="1.0"?>
<package format="2">
  <name>cfs_bridge</name>
  <version>0.1.0</version>
  <description>A runtime bridge between cFS and ROS.</description>

  <maintainer email="jrbohren@honeybeerobotics.com">Jonathan Bohren</maintainer>
  <author email="eabenevedes@honeybeerobotics.com">Eli Benevedes</maintainer>

  <license>Apache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
